# aichallenge-2025-iASL

./: .gitignore  README.md  adapt_tar.bash  docker_run.sh  train.sh
.github/: pull_request_template.md
.github/workflows/: colcon-build-test.yaml
aichallenge/: run_autoware.bash
aichallenge/adapt_submit/: README.md
aichallenge/python_ws/: .gitignore  data_extract.py  requirements.txt  setup.sh  train.py
aichallenge/python_ws/config/: config.yaml
aichallenge/python_ws/src/data/: dataset.py  transform.py
aichallenge/python_ws/src/model/: dual_net.py  net.py
aichallenge/workspace/src/added_module/bag_manager_py/config/: bag_manager.param.yaml
aichallenge/workspace/src/added_module/e2e_control_node/config/: e2e_control_node.param.yaml
aichallenge/workspace/src/added_module/e2e_control_node/e2e_control_node/: e2e_control_node.py
aichallenge/workspace/src/added_module/e2e_control_node/launch/: e2e_control_node.launch.xml
aichallenge/workspace/src/added_module/g923_converter/: CMakeLists.txt  README.md
aichallenge/workspace/src/added_module/g923_converter/src/: gear_changer_node.cpp  handle_converter.cpp
aichallenge/workspace/src/added_module/g923_ros2_driver/: CMakeLists.txt
aichallenge/workspace/src/added_module/g923_ros2_driver/src/: driver.cpp
aichallenge/workspace/src/added_module/image_processor/: CMakeLists.txt  package.xml
aichallenge/workspace/src/added_module/image_processor/config/: image_processor.param.yaml
aichallenge/workspace/src/added_module/image_processor/include/: image_process_node.hpp
aichallenge/workspace/src/added_module/image_processor/launch/: image_processor.launch.xml
aichallenge/workspace/src/added_module/image_processor/src/: image_process_node.cpp
aichallenge/workspace/src/added_module/joy_manager/config/: teleop.param.yaml
aichallenge/workspace/src/added_module/joy_manager/src/: joy_manager_node.cpp
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/config/control/: mpc.param.yaml  pid.param.yaml
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/launch/: reference.launch.xml
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/map/: lanelet2_map.osm
aichallenge/workspace/src/aichallenge_submit/racing_kart_gnss_poser/include/gnss_poser/: gnss_poser_core.hpp
aichallenge/workspace/src/aichallenge_submit/racing_kart_gnss_poser/launch/: gnss_poser.launch.xml
aichallenge/workspace/src/aichallenge_submit/racing_kart_gnss_poser/src/: gnss_poser_core.cpp
aichallenge/workspace/src/bag_manager_py/: setup.py
aichallenge/workspace/src/bag_manager_py/bag_manager_node/: bag_manager_node.py
aichallenge/workspace/src/bag_manager_py/config/: bag_manager.param.yaml
aichallenge/workspace/src/e2e_control_node/: package.xml  setup.cfg  setup.py
aichallenge/workspace/src/e2e_control_node/config/: e2e_control_node.param.yaml
aichallenge/workspace/src/e2e_control_node/e2e_control_node/: e2e_control_node.py
aichallenge/workspace/src/e2e_control_node/e2e_control_node/src/model/: ema.py
aichallenge/workspace/src/e2e_control_node/launch/: e2e_control_node.launch.xml
aichallenge/workspace/src/g923_converter/: CMakeLists.txt  package.xml
aichallenge/workspace/src/g923_converter/config/: converter.param.yaml  handle_converter.param.yaml
aichallenge/workspace/src/g923_converter/launch/: converter.launch.xml
aichallenge/workspace/src/g923_converter/src/: gear_changer_node.cpp  handle_converter.cpp
aichallenge/workspace/src/g923_ros2_driver/: README.md  package.xml
aichallenge/workspace/src/g923_ros2_driver/src/: driver.cpp
aichallenge/workspace/src/joy_manager/: CMakeLists.txt  package.xml
aichallenge/workspace/src/joy_manager/launch/: teleop.launch.xml
(+4 files in other folders)
