<?xml version="1.0"?>
<package format="3">
  <name>g923_converter</name>
  <version>0.1.0</version>
  <description>for aichallenge-2024 AWSIM</description>
  <maintainer email="ky.37f.9850@s.thers.ac.jp"></maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>autoware_auto_control_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
