<?xml version="1.0"?>
<package format="3">
  <name>g923_ros2_driver</name>
  <version>0.1.0</version>
  <description>g923_ros2_driver for ubuntu</description>
  <maintainer email="ky.37f.9850@s.thers.ac.jp"></maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
